--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -46,7 +46,7 @@
       </div>
 
       <footer>
-        <p>&copy; {{ site.author.name }} 2012</p>
+        <p>&copy; {{ site.author.name }}, Inc. 2015</p>
       </footer>
 
     </div> <!-- /container -->
